--- a/web/server/templates/layouts/main.html
+++ b/web/server/templates/layouts/main.html
@@ -11,7 +11,7 @@
     <!-- /meta -->
 
     <!-- styles -->
-    <link rel="stylesheet" href="/static/css/styles.css" />
+    <link rel="stylesheet" href="/static/styles/styles.css" />
     <!-- /styles -->
 
     <!-- favicons -->
