--- a/web/server/templates/pages/index.html
+++ b/web/server/templates/pages/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Vodka Soda{% endblock %}
 {% block content %}
 
 <h1>🍋</h1>
