--- a/web/server/templates/layouts/main.html
+++ b/web/server/templates/layouts/main.html
@@ -15,12 +15,18 @@
     <!-- /styles -->
 
     <!-- favicons -->
-    <link rel="shortcut icon" href="/static/ico/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="/static/ico/favicon.png">
+    <link href="/static/favicons/favicon.png" rel="shortcut icon">
+    <link href="/static/favicons/favicon.ico" rel="icon">
+    <link href="/static/favicons/icon-512.png" rel="icon" sizes="512x512">
+    <link href="/static/favicons/icon-192.png" rel="icon" sizes="192x192">
+    <link href="/static/favicons/icon-144.png" rel="icon" sizes="144x144">
+    <link href="/static/favicons/icon-96.png" rel="icon" sizes="96x96">
+    <link href="/static/favicons/icon-72.png" rel="icon" sizes="72x72">
+    <link href="/static/favicons/icon-512.png" rel="apple-touch-icon" sizes="512x512">
+    <link href="/static/favicons/icon-192.png" rel="apple-touch-icon" sizes="192x192">
+    <link href="/static/favicons/icon-144.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="/static/favicons/icon-96.png" rel="apple-touch-icon" sizes="96x96">
+    <link href="/static/favicons/icon-72.png" rel="apple-touch-icon" sizes="72x72">
     <!-- /favicons -->
 </head>
 <body>
